--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -13,8 +13,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: install
-      run: composer install
+    - name: Setup PHP Action
+      uses: shivammathur/setup-php@2.8.0
+
 
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
