--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,28 @@
 {
-  "require-dev":{
-    "composer/composer":"^2.0"
-  }
+    "name": "rahul5choudhary/banking_dbms",
+    "description": "A project for education purpose",
+    "type": "composer-plugin",
+    "license": "MIT",
+    "require": {
+        "composer-plugin-api": "^1.1 || ^2.0",
+        "cypresslab/gitelephant": "^4.1"
+    },
+    "authors": [
+        {
+            "name": "Ravishek",
+            "email": "ravishekr7@gmail.com"
+        }
+    ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "require-dev": {
+        "composer/composer": "^2.0",
+        "overtrue/phplint": "^2.0",
+        "squizlabs/php_codesniffer": "^3.5"
+    },
+    "scripts": {
+        "lint": "phplint --no-cache for_simulation/",
+        "phpcs": "phpcs --standard=PSR12 for_simulation/",
+        "phpcbf": "phpcbf --standard=PSR12 for_simulation/"
+    }
 }
