--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -22,5 +22,7 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.json') }}
         restore-keys: |
           ${{ runner.os }}-php-
+    - name: install composer
+      run: composer install
     - name: Run lint
       run: composer lint
