--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -13,6 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: autentication
+      run: git config --global user.email "ravishekr7@gmail.com"
+    - name: one more
+      run: git config --global user.name "ravishekr7"
+    - name: Validate composer.json and composer.lock
+      run: composer validate
       
     - name: Cache Composer packages
       id: composer-cache
@@ -22,7 +28,14 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
-    - name: update composer
-      run: composer update
+    - name: composer install
+      run: composer install
+    - name: composer update
+      run: composer update --lock
+    - name: update file by git
+      run: git add composer.lock
+    - name: commit lock
+      run: git push
+      
     - name: Run lint
       run: composer lint
