--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "composer-plugin",
     "license": "MIT",
     "require": {
+        "php": "^7.2.0",
         "composer-plugin-api": "^1.1 || ^2.0",
         "cypresslab/gitelephant": "^4.1"
     },
