--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "squizlabs/php_codesniffer": "^3.5"
     },
     "scripts": {
-        "lint": "phplint --no-cache phpf/",
-        "phpcs": "phpcs --standard=PSR12 phpf/",
-        "phpcbf": "phpcbf --standard=PSR12 phpf/"
+        "lint": "phplint --no-cache for_simulation/",
+        "phpcs": "phpcs --standard=PSR12 for_simulation/",
+        "phpcbf": "phpcbf --standard=PSR12 for_simulation/"
     }
 }
